feat: add TDD test workflow for sidecar CI/CD
Add comprehensive research and test infrastructure for sidecar builds:

- test-sidecar-ci.yml: TDD workflow to validate components before integration
  - Sidecar JAR build (Ubuntu)
  - JRE x64 build with jlink (Windows)
  - JRE ARM64 build with jlink (Windows ARM)
  - Sidecar unit tests
  - Sidecar + JRE integration test

- Research documents:
  - github-actions-sidecar-cicd.md: Full analysis including job dependencies,
    jlink module requirements, E2E strategy, cost analysis
  - github-actions-complete-workflow.yml: Target state for build-windows.yml

Following TDD approach: run test workflow first (RED), then integrate passing
components into main workflow (GREEN).